# Cyberdeck

./: .gitignore  Cargo.toml  DEV.md  README.md  build.rs  my_db.db3  package-lock.json
src/: auth.rs  fixer.rs  main.rs  migrations.rs  services.rs  user.rs
src/routes/: api.rs  auth.rs  mod.rs  service.rs  test.rs
ui/: index.html  jsconfig.json  package-lock.json  package.json
ui/public/: global.css
ui/src/: App.svelte  app.css
ui/src/component/: Graph.svelte  Navbar.svelte
ui/src/js/: auth.js  fetch.js
ui/src/pages/: Login.svelte  Overview.svelte
