[package]
name = "cyberdeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-login = { git = "https://github.com/ncskid/login" }
anyhow = "1.0"
argon2 = "0.5"
rand = { version = "0.8", features = ["min_const_gen"]}
tracing = "0.1"
async-trait = "0.1"
tower-http = { version = "0.3", features = ["full"] }
tokio = { version = "1.3", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tokio-rusqlite = "0.4"
rusqlite_migration = { version = "1.1.0-alpha.2", features = ["async-tokio-rusqlite"] }
rmp-serde = "1.1"
lazy_static = "1.4"
secrecy = "0.8"
serde_json = "1.0"